identity/deploy/accounts/accounts.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: accounts
  namespace: project-starter
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: project-starter-accounts-tls
      hosts:
        - 'accounts.project-starter.site'
